--- a/results.Rmd
+++ b/results.Rmd
@@ -6,7 +6,7 @@ We see that, accounting for nothing other than race, Black defendants received o
 
 As we add and consider factors that might explain some of this variation, we expect to see this differential in sentencing length change. In no particular order, the other explanatory variables are added to the model. For example, when demographic information is included, the differential in sentencing length for Black defendants drops by $(18.5-12.9) = 5.6$ months. With demographic factors added as independent variables, Black defendants receive on average sentences that are 12.9 years longer than white defendants. The researchers included other explanatory variables, including factors considered in the sentencing guidelines. In the end, with all explanatory variables included in the District I Model, we find that Black defendants receive sentences on average 1.9 months longer than white defendants and Hispanic defendants receive sentences at the same length as white defendants.
 
-It is worth noting that the adjusted $r^2$ values are reported. This allows us to determine how much of the variation in sentencing is explained by the independent variables considered in the model. For the baseline model, the adjusted $r^2$ is 0.02, meaning that only 2% of the variability in sentence length is explained by the baseline model. For the full model, the adjusted $r^2$ is reported as 0.79, meaning that 79% of the variability in sentence length is explained by the full model. The adjusted $r^2$ is reported instead of $r^2$ because adjusted $r^2$ adjusts for the number of independent variables included in the model. As we add explanatory variables, $r^2$ will likely increase, but it might be a spurious increase. The adjusted $r^2$ takes the number of variables into account so is reported in multivariate regressions.
+It is worth noting that the adjusted $R^2$ values are reported. This allows us to determine how much of the variation in sentencing is explained by the independent variables considered in the model. For the baseline model, the adjusted $R^2$ is 0.02, meaning that only 2% of the variability in sentence length is explained by the baseline model. For the full model, the adjusted $R^2$ is reported as 0.79, meaning that 79% of the variability in sentence length is explained by the full model. The adjusted $R^2$ is reported instead of $R^2$ because adjusted $R^2$ adjusts for the number of independent variables included in the model. As we add explanatory variables, $R^2$ will likely increase, but it might be a spurious increase. The adjusted $R^2$ takes the number of variables into account so is reported in multivariate regressions.
 
 The authors further refine the analysis by looking at individual districts rather than the federal court system nationwide in the District II Model. We focus our examination on the results of this model. We see that Black defendants receive longer sentences than white defendants in 11 districts and ARI defendants receive longer sentences than white defendants in 3 districts. Figure 3 pulls out these districts and provides the 95% confidence interval for the sentence differential and Figure 4 highlights the locations of these districts in the U.S.
 
