--- a/introduction.Rmd
+++ b/introduction.Rmd
@@ -15,15 +15,16 @@ If you are new to data science in R/Rstudio, before you embark on this case stud
 This case study assumes that you have access to RStudio, a programming environment built on the statistical computing language R. If you want to use RStudio on your own computer, you should first [install R](https://cran.r-project.org), and then [install RStudio](https://www.rstudio.com/products/rstudio/download/#download). Alternatively, you can register for a free account with [Posit Cloud](https://posit.cloud), an online version of RStudio that you can access through any standard web browser. 
 
 R is a powerful language, made even more powerful by additional free software packages that enhance its functionality. Regardless of how you run RStudio, you will need access to the packages below, which are automatically activated in the code that produces this document. Make sure you download these packages using the `Packages` tab in RStudio and run the commands below before proceeding with this case study.
-```{r, message = FALSE, warning = FALSE}
+
+```{r, message = FALSE}
 library(tidyverse)
-library(readr)
 library(ggridges)
 library(tidycensus)
 library(palmerpenguins)
 library(gridExtra)
 library(broom)
-library(ggplot2)
+library(emmeans)
+library(kableExtra)
 ```
 
 QSIDE is a 501(c)3 tax-exempt nonprofit organization. Initiatives like our Data4Justice curriculum require resources to produce, and we depend on a public that is willing to support social justice initiatives. Anyone is welcome to use this document for free, but we ask those who are able to [please make a donation to QSIDE](https://qsideinstitute.org/support-us/donate/) so that we can maintain our innovative research, action, and education efforts at the interface of data science and social justice. Additionally, we ask anyone using any or all of this document to cite it properly using the citation above.
