Rename sections and make light edits

--- a/background.Rmd
+++ b/background.Rmd
@@ -8,9 +8,9 @@ Our case study centers around issues of racial disparity in criminal sentencing,
 
 ---
 
-**Abstract**
-
-Race-based inequity in federal criminal sentencing is widely acknowledged, and yet our understanding of it is far from complete. Inequity may arise from several sources, including direct bias of courtroom actors and structural bias that produces racially disparate impacts. Irrespective of these sources, inequity may also originate from different loci within the federal system. We bring together the questions of the sources and loci of inequity. The purpose of our study is to quantify race-based disparate impact and differential treatment at the national level and at the level of individual federal judicial districts. We analyze over one-half million sentencing records publicly available from the United States Sentencing Commission database, spanning the years 2006 to 2020. At the system-wide level, Black and Hispanic defendants receive average sentences that are approximately 19 months longer and 5 months longer, respectively. Demographic factors and sentencing guideline elements account for nearly 17 of the 19 months for Black defendants and all five of the months for Hispanic defendants, demonstrating the disparate impact of the system at the national level. At the individual district level, even after controlling for each district’s unique demographics and implementation of sentencing factors, 14 districts show significant differences for minoritized defendants as compared to white ones. These unexplained differences are evidence of possible differential treatment by judges, prosecutors, and defense attorneys.
+> **Abstract**
+>
+> Race-based inequity in federal criminal sentencing is widely acknowledged, and yet our understanding of it is far from complete. Inequity may arise from several sources, including direct bias of courtroom actors and structural bias that produces racially disparate impacts. Irrespective of these sources, inequity may also originate from different loci within the federal system. We bring together the questions of the sources and loci of inequity. The purpose of our study is to quantify race-based disparate impact and differential treatment at the national level and at the level of individual federal judicial districts. We analyze over one-half million sentencing records publicly available from the United States Sentencing Commission database, spanning the years 2006 to 2020. At the system-wide level, Black and Hispanic defendants receive average sentences that are approximately 19 months longer and 5 months longer, respectively. Demographic factors and sentencing guideline elements account for nearly 17 of the 19 months for Black defendants and all five of the months for Hispanic defendants, demonstrating the disparate impact of the system at the national level. At the individual district level, even after controlling for each district’s unique demographics and implementation of sentencing factors, 14 districts show significant differences for minoritized defendants as compared to white ones. These unexplained differences are evidence of possible differential treatment by judges, prosecutors, and defense attorneys.
 
 ---
 
@@ -62,13 +62,13 @@ We will analyze the over one-half million sentencing records spanning the years 
 
 The data come from two sources: the pre-sentencing report and the Statement of Reasons. The pre-sentencing report is prepared by the District's Probation Office and based on a post-trial, pre-sentencing investigation including an interview with the defendant. A draft of this report is issued to the attorneys for comments and corrections and a final version is given to the attorneys and judge. The Statement of Reasons is a form filled out by the judge explaining/supporting the sentence imposed.
 
-### Variable explanation
+### Explanation of variables
 
 The two main variables used in the non-mandatory guidelines for sentencing are criminal history (`criminal_history`) and an indicator of the severity of the crime (`all_adjustments`). The two variables are combined, using a table, to determine the recommended range of the sentence.
 
-The variable `criminal_history` is coded as a value 1--6. Prior convictions are assigned "points," depending on the number of prior convictions, length(s) of sentence(s), and whether or not past crimes involved violence. The points are then summed and translated into a "criminal history category," represented by the `criminal_history` values 1 through 6. A value of 1, for example, would refer to a defendant with at most one conviction, where that conviction resulted in a sentence of less than 60 days. As an additional example, a defendant who has three prior convictions with sentences of over 13 months and two with sentences between 2 and 13 months would be assigned a total of 13 points, yielding the criminal history category 6. With only one prior conviction of each type, the category would be 3. The calculation is not quite this simple, with many adjustments and some types of convictions and very old convictions being ignored.
+The variable `criminal_history` is coded as a value 1 to 6. Prior convictions are assigned points depending on the number of prior convictions, length(s) of sentence(s), and whether or not past crimes involved violence. The points are then summed and translated into a criminal history category represented by the `criminal_history` values 1 through 6. A value of 1, for example, would refer to a defendant with at most one conviction, where that conviction resulted in a sentence of less than 60 days. As an additional example, a defendant who has three prior convictions with sentences of over 13 months and two with sentences between 2 and 13 months would be assigned a total of 13 points, yielding the criminal history category 6. With only one prior conviction of each type, the category would be 3. The calculation is not quite this simple, with many adjustments and some types of convictions and very old convictions being ignored.
 
-The variable `all_adjustments` is a rating of the offense level (how severe the crime is) with adjustments (added considerations that call for higher or lower offense level), as defined by the US Sentencing Commission's Sentencing Guidelines Manual and interpreted by the US Probation Office and/or the Presiding Judge. There are 43 levels where, for example, first degree murder has a base level (that is, level prior to adjustments) of 43 and trespassing has a base level of 4. Two additional variables, `base_chapter2_adjustments` and `base_chapter2_3_adjustments`, have to do with the derivation of `all_adjustments`, but you can ignore these variables for the purposes of this case study.
+The variable `all_adjustments` is a rating of the *offense level* (how severe the crime is) with *adjustments* (added considerations that call for higher or lower offense level), as defined by the US Sentencing Commission's Sentencing Guidelines Manual and interpreted by the US Probation Office and/or the Presiding Judge. There are 43 levels where, for example, first degree murder has a base level (that is, level prior to adjustments) of 43 and trespassing has a base level of 4. Two additional variables, `base_chapter2_adjustments` and `base_chapter2_3_adjustments`, have to do with the derivation of `all_adjustments`, but you can ignore these variables for the purposes of this case study.
 
 Apart from `criminal_history` and `all_adjustments`, there are several variables related to the identity of defendants: 
 
@@ -79,7 +79,7 @@ Apart from `criminal_history` and `all_adjustments`, there are several variables
 
 A key motivation for this work is exploring how our personal and racial identities influence the judicial sentencing. In a fair, democratic system this identity or perceived identity should not affect how we are treated by the justice system. It is important to note that these characteristics are not independent of one another but can intersect and interact with one another. This combined effect is known as intersectionality. The Center for Intersectional Justice describes the concept of intersectionality as: "the ways in which systems of inequality based on gender, race, ethnicity, sexual orientation, gender identity, disability, class and other forms of discrimination 'intersect' to create unique dynamics and effects" (Ref: [Center for Intersectional Justice](https://www.intersectionaljustice.org/what-is-intersectionality), July 20, 2023). 
 
-Let's take a moment to also consider how these identity-based variables were defined. `sex`, for example, is defined in a pre-sentencing report that comes out of the investigation done by the probation office. This goes to the attorneys and also comes out of an interview with the individual. It should be noted that there are only two categories, so it is likely that there might be only two options possible for the individual. Not only is this challenging in that it restricts a defendant's identity to two rigid categories, but a binary variable will not reflect sentenced individuals' gender identity and excludes several groups, such as non-binary individuals, altogether. Therefore, a limitation of this study comes through in the "levels" of each variable being predetermined by the data-collecting institutions we are relying on. It is critical that in such instances we not only acknowledge this limitation, but contextualize our analysis and inferences with this knowledge. 
+Let's take a moment to also consider how these identity-based variables were defined. Sex, for example, is defined in a pre-sentencing report that comes out of the investigation done by the probation office. This goes to the attorneys and also comes out of an interview with the individual. It should be noted that there are only two categories, so it is likely that there might be only two options possible for the individual. Not only is this challenging in that it restricts a defendant's identity to two rigid categories, but a binary variable will not reflect sentenced individuals' gender identity and excludes several groups, such as non-binary individuals, altogether. Therefore, a limitation of this study comes through in the "levels" of each variable being predetermined by the data-collecting institutions we are relying on. It is critical that in such instances we not only acknowledge this limitation, but contextualize our analysis and inferences with this knowledge. 
 
 <!-- Attempted to write this section above, but could clarify/add based on these notes:
 - See Background section or link to official report for more information
@@ -100,4 +100,6 @@ The nine other variables in the data set refer to information about the court ca
 * `mandatory_min`, which signifies whether or not the court case included a mandatory minimum sentence, 
 * `gov_departures`, which tracks government sponsored downward departures, and 
 * `district`, which refers to the district where the trial took place. 
+
+As you work through the analyses in this case study, you might return to this background information as needed to remind yourself of the context of the data.
 
